# Rag-on-EU-Taxonomy

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: chatbot_page.py  documentation_page.py  generation_eval_ui.py  home_page.py  streamlit_app.py
data/: taxonomy_faqs_cleaned.md
data/evaluation/: natural_user_queries_748.jsonl  retrieval_golden_dataset.jsonl  retrieval_golden_dataset_cleaned.jsonl
data/evaluation/results/: retrieval_eval_natural_user_queries_748_20260621T213346Z.json  retrieval_eval_natural_user_queries_748_20260621T213946Z.json  (+8 more)
docs/: chunking.md  golden_dataset.md  golden_dataset_validation.md  natural_dataset.md  natural_user_queries_748.md
docs/documentation/: benchmarking.md  evaluation_datasets.md  faithfulness.md  generation.md  home.md  indexing.md  ingestion.md  kpi_tracking.md  retrieval.md  roadmap.md  tradeoffs.md
scripts/: generate_golden_dataset.py  generate_natural_queries.py  run_evaluation.py  start.sh  validate_golden_dataset.py
src/eu_taxonomy_rag/: __init__.py  cli.py  paths.py
tests/: test_chunk_cache.py  test_dashboard.py  test_documentation.py  test_embeddings.py  test_env_store.py  test_evaluation_runner.py  test_evaluation_store.py  test_explorer.py  test_generation_eval.py  test_golden_dataset.py  test_golden_dataset_validator.py  test_indexes.py  test_ingestion.py  test_llm_client.py  test_metrics.py  test_natural_dataset.py  test_numpy_index.py  test_paths.py  test_prompt.py  test_rag_pipeline.py  test_retriever.py  test_search_pipeline.py
(+30 files in other folders)
